<resources>
    <string name="app_name">Lists and Maps efficiency</string>
    <string name="lists">Lists</string>
    <string name="maps">Maps</string>
    <string name="operation">Operation</string>
    <string name="array">Array</string>
    <string name="linked">Linked</string>
    <string name="copy_on_write">CopyOnWrite</string>
    <string name="adding_in_the_beginning">Adding in the beginning</string>
    <string name="adding_in_the_middle">Adding in the middle</string>
    <string name="adding_in_the_end">Adding in the end</string>
    <string name="search_by_value">Search by value</string>
    <string name="removing_in_the_beginning">Removing in the beginning</string>
    <string name="removing_in_the_middle">Removing in the middle</string>
    <string name="removing_in_the_end">Removing in the end</string>
    <string name="removing">Removing</string>
    <string name="search_by_key">Search by key</string>
    <string name="adding_new">Adding new</string>
    <string name="tree_map">TreeMap</string>
    <string name="hash_map">HashMap</string>
    <string name="calculate">Calculate</string>
    <string name="cancel">Cancel</string>
    <string name="enter_the_size">Enter the size</string>
    <string name="one_million">1000000</string>
    <string name="enter_any_number">Enter any number!</string>
    <string name="wait_counting_in_progress">Please wait, counting in progress</string>
    <string name="loading_failed">Loading failed</string>
</resources>