<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_padding">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/edNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:text="@string/one_million" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCalculate"
            style="@style/DialogButtonStyle"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/calculate"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCancel"
            style="@style/DialogButtonStyle"
            android:text="@string/cancel" />

    </LinearLayout>

</LinearLayout>